@@ -43,11 +43,16 @@
 #-- Show status OSD key
 #key_showstatusosd=
 
-#-- Show album's track number if not equal to playlist's track number;
-#-- Playlists can be long, traversing multiple directories.
-#-- This will show the current album's track number in addition
+#-- Show current chapter number in addition to the current playlist position.
+#-- Can be useful also for audio files with internal chapters having a song
+#-- per chapter.
+#show_current_chapter_number=no
+
+#-- Show album's current track number (if not equal to the current playlist
+#-- position); Playlists can be long, traversing multiple directories.
+#-- This will show the album's current track number in addition
 #-- to the (encompassing) playlist position (if present in metadata).
-#show_albumtrack_number=no
+#show_current_albumtrack_number=no
 
 #osd_message_maxlength=96
 
